Fix to not render mobile app player when on mobile & Styling

--- a/src/assets/styles/pages/Login.scss
+++ b/src/assets/styles/pages/Login.scss
@@ -8,7 +8,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    z-index: 1;
+    z-index: 50;
 
   }
 
@@ -18,7 +18,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background: linear-gradient(rgba(255, 255, 255, 0.1) 0%, rgb(0, 0, 0) 100%);
+    background: linear-gradient(rgba(255, 255, 255, 0.1) 0%, rgb(10 10 10) 100%);
     display: flex;
     justify-content: center;
     align-items: center;
